--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,8 +61,6 @@ jobs:
       matrix:
         os:
         - ubuntu-latest
-        - macos-latest
-        - windows-latest
         python-version:
         - "3.10"
         - "3.13"
@@ -86,4 +84,4 @@ jobs:
       run: pdm install --no-editable -G ci-tests
 
     - name: Run the test suite
-      run: pdm run duty test
+      run: pdm run make -C tests
