--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,3 +23,9 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         body_path: release-notes.md
+    - name: Set up PDM
+      uses: pdm-project/setup-pdm@v4
+      with:
+        python-version: "3.10"
+    - name: Build Docs
+      run: pdm run mkdocs gh-deploy
