--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,4 +84,4 @@ jobs:
       run: pdm install --no-editable -G ci-tests
 
     - name: Run the test suite
-      run: pdm run make -C tests
+      run: sudo apt install -y iverilog && pdm run make -C tests
