--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
 regression:
 	echo Running regression
-include $(shell cocotb-config --makefiles)/Makefile.sim
 .PHONY: regression
+# include $(shell cocotb-config --makefiles)/Makefile.sim
