--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,5 +27,7 @@ jobs:
       uses: pdm-project/setup-pdm@v4
       with:
         python-version: "3.10"
+    - name: Install dependencies
+      run: pdm install -G docs
     - name: Build Docs
       run: pdm run mkdocs gh-deploy
